fixed scrollbar issue!  Also, more pictures

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,8 @@ body, a, div {
   width:100%;
   height:100%;
   background-color: #fff;
-  margin-top:15px;
+  padding-top:0px;
+  padding-bottom:0px;
 }
 
 #photo-disp-column {
